[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4"
actix-web-actors = "4.2.0"
derive_more = "0.99.17"
env_logger = "0.10.1"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
